# leetcoach

./: .bot.local.env.example  .codex.local.env.example  .dockerignore  .gitignore  CLAUDE_DEMO.md  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: deploy-fedora.yml  tests.yml
docs/: db-quickstart.md  deploy-fedora-runner.md  project-tracker.md  telegram-command-contract.md  usage.md  v1-software-design.md  v1-spec.md  v2-spec.md  v3-spec.md
leetcoach/: __init__.py  app.py  bootstrap.py  cli.py  config.py  env.py  notion_importer.py  patterns.py  reminder_scheduler.py  telegram_bot.py
leetcoach/app/: __init__.py
leetcoach/dao/: __init__.py  active_quiz_sessions_dao.py  analytics_dao.py  problem_reviews_dao.py  problems_dao.py  review_queue_dao.py  user_problems_dao.py  users_dao.py
leetcoach/db/: __init__.py  connection.py  migrate.py
leetcoach/llm/: __init__.py  gemini_provider.py
leetcoach/services/: __init__.py  analytics_tools.py  due_tokens.py  log_problem_service.py  query_service.py  quiz_service.py
migrations/: 0001_init.sql  0002_problem_slug_constraints.sql  0003_active_quiz_sessions.sql  0004_user_reminder_preferences.sql  0005_user_reminder_hour.sql  0006_review_queue_state.sql  0007_user_problem_display_ids.sql
scripts/: README.md  gh_app_token.sh  git_bot_commit.sh  git_codex_commit.sh
tests/integration/: test_log_problem_service.py  test_query_service.py
tests/unit/: test_config.py  test_due_tokens.py  test_main_doctor.py  test_notion_importer.py  test_reminder_scheduler.py  (+1 more)
(+81 files in other folders)
