[project]
name = "leetcoach"
version = "0.1.0"
description = "LeetCode prep assistant"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1,<9.0",
    "python-telegram-bot>=21.0,<22.0",
]

[project.scripts]
lch = "leetcoach.app.interface.cli.commands:cli"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["leetcoach*"]
exclude = ["migrations*"]
